test/spec/start.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/start.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/start.wast:2:25: function variable out of range (max 1)
  (module (func) (start 1))
                        ^
assert_invalid error:
  out/third_party/testsuite/start.wast:9:5: start function must not return anything
    (start $main)
    ^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/start.wast:16:5: start function must be nullary
    (start $main)
    ^^^^^^^^^^^^^
out/third_party/testsuite/start.wast:2: assert_invalid passed:
  error: @0x00000015: invalid start function index
out/third_party/testsuite/start.wast:7: assert_invalid passed:
  error: start function must not return anything
  error: @0x00000016: on_start_function callback failed
out/third_party/testsuite/start.wast:14: assert_invalid passed:
  error: start function must be nullary
  error: @0x00000016: on_start_function callback failed
inc() =>
inc() =>
inc() =>
inc() =>
called host spectest.print(i32:1) =>
called host spectest.print(i32:2) =>
called host spectest.print() =>
14/14 tests passed.
;;; STDOUT ;;)
